force-app/main/default/objects/Contact/fields/Active_Investor__c.field-meta.xml
<CustomField>
    <fullName>Active_Investor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this Contact currently holds at least one active investment position.</description>
    <inlineHelpText>Checked when this investor currently holds an active position.</inlineHelpText>
    <label>Active Investor</label>
    <type>Checkbox</type>
</CustomField>