force-app/main/default/objects/Contact/fields/Active_Listings__c.field-meta.xml
<CustomField>
    <fullName>Active_Listings__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of active listings the broker currently has in market.</description>
    <label>Active Listings</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>