force-app/main/default/objects/Contact/fields/Active_Positions__c.field-meta.xml
<CustomField>
    <fullName>Active_Positions__c</fullName>
    <description>The total number of currently active investment positions held by this Contact across all investing entities.</description>
    <inlineHelpText>Count of this investor's currently active investment positions.</inlineHelpText>
    <label>Active Positions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>