force-app/main/default/objects/Contact/fields/Avg_Days_On_Market__c.field-meta.xml
<CustomField>
    <fullName>Avg_Days_On_Market__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Average days on market across the broker&apos;s listings.</description>
    <label>Avg Days on Market</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>