force-app/main/default/objects/Contact/fields/Broker_Firm__c.field-meta.xml
<CustomField>
    <fullName>Broker_Firm__c</fullName>
    <description>Brokerage firm the broker represents (e.g. CBRE, JLL, Marcus &amp; Millichap).</description>
    <label>Broker Firm</label>
    <length>120</length>
    <type>Text</type>
</CustomField>