force-app/main/default/objects/Contact/fields/Broker_License__c.field-meta.xml
<CustomField>
    <fullName>Broker_License__c</fullName>
    <description>The broker&apos;s state real estate license number. Recorded for compliance reference.</description>
    <label>Broker License</label>
    <length>40</length>
    <type>Text</type>
</CustomField>