force-app/main/default/objects/Contact/fields/Broker_Priority__c.field-meta.xml
<CustomField>
    <fullName>Broker_Priority__c</fullName>
    <description>Broker-level priority (source of truth). Copied onto Leads this broker submits so intake can be prioritized by broker, then by first-received timestamp.</description>
    <label>Broker Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>