force-app/main/default/objects/Contact/fields/Closed_Volume__c.field-meta.xml
<CustomField>
    <fullName>Closed_Volume__c</fullName>
    <description>Total closed deal volume attributed to the broker.</description>
    <label>Closed Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>