force-app/main/default/objects/Contact/fields/Deals_Won__c.field-meta.xml
<CustomField>
    <fullName>Deals_Won__c</fullName>
    <description>Number of this broker&apos;s deals that reached Closed Won. Populated by automation (not a native roll-up, since Opportunities are not master-detail children of Contact).</description>
    <label>Deals Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>