force-app/main/default/objects/Contact/fields/Is_Accredited__c.field-meta.xml
<CustomField>
    <fullName>Is_Accredited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this investor Contact has self-attested or been verified as an accredited investor per SEC Regulation D. Mirrors Lead.Is_Accredited__c and receives its value from the Lead on conversion via InvestorLeadConvertService — no user action is required to populate it directly.</description>
    <inlineHelpText>Check if this investor has confirmed accredited investor status.</inlineHelpText>
    <label>Is Accredited</label>
    <type>Checkbox</type>
</CustomField>