force-app/main/default/objects/Contact/fields/Is_Broker__c.field-meta.xml
<CustomField>
    <fullName>Is_Broker__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flags this Contact as a brokerage broker for the Acquisition Broker Hub.</description>
    <label>Is Broker</label>
    <type>Checkbox</type>
</CustomField>