force-app/main/default/objects/Contact/fields/Lifetime_Invested__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Invested__c</fullName>
    <description>The total dollar amount this Contact has actually funded (invested) over their lifetime as a DPEG investor.</description>
    <inlineHelpText>Sum of all funded investment amounts for this investor, lifetime to date.</inlineHelpText>
    <label>Lifetime Invested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>