force-app/main/default/objects/Contact/fields/Mobile_Activated__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Activated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this investor Contact has activated the DPEG mobile app.</description>
    <inlineHelpText>Checked once the investor has activated the mobile app.</inlineHelpText>
    <label>Mobile Activated</label>
    <type>Checkbox</type>
</CustomField>