force-app/main/default/objects/Contact/fields/NDA_On_File__c.field-meta.xml
<CustomField>
    <fullName>NDA_On_File__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE if DPEG holds a signed NDA with this broker from any previous deal. Speeds the NDA process on future deals.</description>
    <label>NDA On File</label>
    <type>Checkbox</type>
</CustomField>