force-app/main/default/objects/Contact/fields/Offers_Received__c.field-meta.xml
<CustomField>
    <fullName>Offers_Received__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total offers the broker&apos;s listings have generated.</description>
    <label>Offers Received</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>