force-app/main/default/objects/Contact/fields/Portal_Activated__c.field-meta.xml
<CustomField>
    <fullName>Portal_Activated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this investor Contact has activated their Experience Cloud investor portal login.</description>
    <inlineHelpText>Checked once the investor has activated their portal account.</inlineHelpText>
    <label>Portal Activated</label>
    <type>Checkbox</type>
</CustomField>