force-app/main/default/objects/Contact/fields/Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Referred_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Self-lookup to the Contact who referred this investor Contact. Receives its value from Lead.Referred_By__c on conversion via InvestorLeadConvertService — no user action is required to populate it directly. Distinct relationshipName from Lead.Referred_By__c (both point at Contact and would otherwise collide on the child relationship name).</description>
    <inlineHelpText>The Contact who referred this investor, if known.</inlineHelpText>
    <label>Referred By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referred Contacts</relationshipLabel>
    <relationshipName>Referred_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>