force-app/main/default/objects/Contact/fields/Repeat_Investor__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Investor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this Contact has invested in more than one DPEG offering.</description>
    <inlineHelpText>Checked when this investor has committed to more than one offering.</inlineHelpText>
    <label>Repeat Investor</label>
    <type>Checkbox</type>
</CustomField>