force-app/main/default/objects/Contact/fields/Total_Commitments__c.field-meta.xml
<CustomField>
    <fullName>Total_Commitments__c</fullName>
    <description>The total dollar amount this Contact has committed across all investments, active and closed.</description>
    <inlineHelpText>Sum of all committed amounts across this investor's investments.</inlineHelpText>
    <label>Total Commitments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>