force-app/main/default/objects/Contact/fields/Total_Distributed__c.field-meta.xml
<CustomField>
    <fullName>Total_Distributed__c</fullName>
    <description>The total dollar amount distributed back to this Contact across all investments, lifetime to date.</description>
    <inlineHelpText>Sum of all distributions paid to this investor, lifetime to date.</inlineHelpText>
    <label>Total Distributed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>