force-app/main/default/objects/Contact/fields/Total_Investing_Entities__c.field-meta.xml
<CustomField>
    <fullName>Total_Investing_Entities__c</fullName>
    <description>The total number of investing entity Accounts this Contact is associated with as an investor.</description>
    <inlineHelpText>Count of investing entities linked to this investor.</inlineHelpText>
    <label>Total Investing Entities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>