force-app/main/default/objects/Contact/recordTypes/Investor.recordType-meta.xml
<RecordType>
    <!--
        THE INVESTOR CONTACT. Net new as of 2026-08-10 - no existing Contact carries this type.

        CONTACT RECORD TYPES DRIVE LAYOUT, FLS AND REPORTING ONLY - NOT SHARING. Contact
        sharing is inherited from its Account via ControlledByParent (target state - see the
        comment in Account/recordTypes/Investor_Entity.recordType-meta.xml for the org's
        current, measured OWD, which has not yet been corrected to match this design). MEASURED,
        not assumed: Contact's live InternalSharingModel was queried via the Tooling API
        (`SELECT InternalSharingModel FROM EntityDefinition WHERE DeveloperName = 'Contact'`)
        on 2026-08-10 (Task 0 of this plan) and returned ReadWrite, contradicting this repo's
        own Contact.object-meta.xml, which still declares ControlledByParent. The
        Record_Type_Matches_Account validation rule (Task 8) is what keeps a Contact's own
        record type from disagreeing with its parent Account's record type.

        ⚠ FIX 2026-08-10 (code review, CRITICAL) - EVERY PICKLIST ON THE OBJECT IS ENUMERATED
        BELOW - Salutation, LeadSource, OtherGeocodeAccuracy, MailingGeocodeAccuracy,
        ContactSource, TitleType, DepartmentGroup, BuyerAttributes, Broker_Priority__c,
        Broker_Specialty__c and Broker_Status__c - because a record type file that omits a
        picklist silently drops ALL of that picklist's values from that type. This is the same
        rule already enforced under NDA__c, Contract_Review__c, Disposition__c and LOI__c; the
        original brief that produced this file omitted it, which was a plan defect, not a
        deliberate narrowing. The full value set was pulled from a LIVE ORG DESCRIBE
        (`sf sobject describe, sobject=Contact`), never from this repo's field files, because
        `sf project retrieve` unions local and remote picklist values and a repo field file can
        list values the org no longer has. Both Contact record types (this one and Broker) carry
        the IDENTICAL, COMPLETE value set with the SAME defaults (Broker_Priority__c = Standard,
        Broker_Specialty__c = Retail, Broker_Status__c = Active) - narrowing either record
        type's values is a separate, deliberate change for later. This type carries no existing
        rows today, so "behaviour-neutral" here means it is created with the full value set
        available from day one, matching its sibling. The Broker_* defaults reading oddly on an
        Investor Contact is a known cosmetic gap, not a functional one - a future value-set
        narrowing (out of scope here) is the right place to fix it.
    -->
    <fullName>Investor</fullName>
    <active>true</active>
    <description>Investor contact. Layout/FLS/reporting only - sharing is inherited from the parent Account. See the XML comment in this file.</description>
    <label>Investor</label>
</RecordType>